--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Importing Libraries**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 49,
       "metadata": {
@@ -26,6 +33,11 @@
       "source": [
         "warnings.filterwarnings('ignore')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "code",
