--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -35,11 +35,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
       "cell_type": "code",
       "execution_count": 51,
       "metadata": {
@@ -673,6 +668,13 @@
       ],
       "source": [
         "df_item.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Merging dataframes**"
       ]
     },
     {
