--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -820,14 +820,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 66,
-      "metadata": {
-        "id": "bneyGypeertE"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "##Exploratory Data Analysis"
+        "**Exploratory Data Analysis**"
       ]
     },
     {
