--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -1139,6 +1139,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Plotting on the basis of Nuber of Ratings**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 75,
       "metadata": {
