--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -1175,6 +1175,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Plotting on the basis of Rating**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 77,
       "metadata": {
