--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -1210,6 +1210,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Joining the above two plot with the help of Seaborn**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 78,
       "metadata": {
