--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -1254,14 +1254,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 79,
-      "metadata": {
-        "id": "HEty1qQtjuIv"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "##Creating Movie reccomendation"
+        "**##Creating Movie reccomendation**"
       ]
     },
     {
