--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -1257,7 +1257,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**##Creating Movie reccomendation**"
+        "**Creating Movie reccomendation**"
       ]
     },
     {
@@ -2425,7 +2425,7 @@
         }
       ],
       "source": [
-        "moviemat\n"
+        "moviemat"
       ]
     },
     {
@@ -2559,6 +2559,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##STar War User ratings-swur"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 87,
       "metadata": {
@@ -2566,8 +2573,14 @@
       },
       "outputs": [],
       "source": [
-        "##STar War User rtings\n",
         "swur=moviemat['Star Wars (1977)']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Finding the Correlation**"
       ]
     },
     {
