added the info fileipynb

--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -2912,6 +2912,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## By only considering values that have more than 100 people rating them"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 103,
       "metadata": {
