--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -3049,14 +3049,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 104,
-      "metadata": {
-        "id": "ZnOjF9dnnVmx"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "##Predicting function"
+        "**Predicting function**"
       ]
     },
     {
