--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -3076,6 +3076,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Consider an example movie**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 110,
       "metadata": {
@@ -3083,7 +3090,7 @@
       },
       "outputs": [],
       "source": [
-        "#example movie\n",
+        "\n",
         "\n",
         "\n",
         "predictions=predict_movies('Titanic (1997)')"
